fix news and events spacing issue and add margin mixin to patterns

--- a/themes/math_research_center/patterns/molecules/news-card/scss/news-card.scss
+++ b/themes/math_research_center/patterns/molecules/news-card/scss/news-card.scss
@@ -13,18 +13,19 @@
   '../utilities/mixins/mixins';
 
 .mrc-news-card {
+  @include margin(null null 2em);
   @include mrc-card-container;
   @include mrc-flex-medium;
 
   .mrc-news-card__img {
-    margin-right: 0;
+    @include margin(null 0 null null);
 
     img {
       width: 100%;
     }
 
     @include media($medium-screen) {
-      margin-right: 30px;
+      @include margin(null 30px null null);
 
       img {
         width: auto;
@@ -34,7 +35,7 @@
 
   .mrc-news-card__content {
     .mrc-news-card__date {
-      margin: 0 0 0.25em 0;
+      @include margin(0 0 0.25em 0);
     }
 
     .mrc-news-card__subcontent {
@@ -43,7 +44,7 @@
       @include mrc-flex-medium;
 
       .mrc-news-card__source {
-        margin: 0 0 0.25em 0;
+        @include margin(0 0 0.25em 0);
 
         @include media($medium-screen) {
           margin: 0;
@@ -51,12 +52,12 @@
       }
 
       .mrc-news-card__program {
-        margin-top: 0;
+        @include margin(0 null null);
       }
     }
 
     .mrc-news-card__title {
-      margin-top: 0.5em;
+      @include margin(0.5em null null);
     }
   }
 }
